test/should_pass/basic_200.grg
actions basic_200;

rule r {
	pattern {
		if{ false; }
		negative {
		}
	}
	modify {
	}
}

