test/should_fail/inh_attrib_005.grg
actions inh_attrib_005 using inh_attrib_model_005;

rule r {
	pattern {
	}
	replace {
	}
}

